<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        >

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/grey2"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_7"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_8"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_9"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/boton_multiplicar"
                    android:textSize="30sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_4"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_5"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_6"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/boton_restar"
                    android:textSize="30sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_1"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_2"                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_3"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/boton_sumar"
                    android:textSize="30sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_coma"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button14"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/boton_0"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/button15"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/boton_igual"
                    android:textSize="30sp"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>